--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <table cellspacing="15">
     <tr>
-      <td><img src="C:\Users\vicky\Documents\Web Development\My Personal Website\Vicky Venil Machado (2)-modified.png" alt="Vicky's profile pic" width="200" height="200">
+      <td><img src="Vicky Venil Machado (2)-modified.png" alt="Vicky's profile pic" width="200" height="200">
       </td>
       <td>
         <h1> <b>Vicky Venil Machado</b></h1>
@@ -93,8 +93,8 @@
 
   </table>
   <hr>
-  <br> <a href="C:\Users\vicky\Documents\Web Development\My Personal Website\education.html">Education</a>
-  <a href="C:\Users\vicky\Documents\Web Development\My Personal Website\contactform.html">Contact me!</a>
+  <br> <a href="education.html">Education</a>
+  <a href="contactform.html">Contact me!</a>
 </body>
 
 </html>
